--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,3 +18,50 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+
+    - name: Build the project
+      run: cargo build --release
+
+    - name: Create a release asset directory
+      run: mkdir -p release
+
+    - name: Copy binary to release directory
+      run: cp target/release/game_of_life ./release/
+
+    - name: Upload release asset
+      uses: actions/upload-artifact@v3
+      with:
+        name: game_of_life_binary
+        path: ./release/game_of_life
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download the build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: game_of_life_binary
+
+      - name: Publish GitHub Release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ github.ref_name }}
+          name: ${{ github.ref_name }}
+          body: |
+            Automated release for version ${{ github.ref_name }}.
+          files: ./game_of_life
+          draft: false
+          prerelease: false
