--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -88,7 +88,7 @@ jobs:
           body: |
             Automated release for version ${{ github.ref_name }}.
           files: |
-            ./*
+            ./game_of_life_binary_ubuntu-latest
           draft: false
           prerelease: false
           allowUpdates: true
