--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,15 +15,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]  # Builds for Linux, macOS, and Windows
-        # os: [ubuntu-latest, macos-latest, windows-latest]  # Builds for Linux, macOS, and Windows
+        os: [ubuntu-latest, macos-latest, windows-latest]  # Builds for Linux, macOS, and Windows
         include:
           - os: ubuntu-latest
             extension: ""
-          # - os: macos-latest
-          #   extension: ""
-          # - os: windows-latest
-          #   extension: ".exe"
+          - os: macos-latest
+            extension: ""
+          - os: windows-latest
+            extension: ".exe"
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -57,28 +56,12 @@ jobs:
 
       - name: Download the Linux binary artifact
         uses: actions/download-artifact@v3
-
-      # - name: Download the Linux binary artifact
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: game_of_life_binary_ubuntu-latest
-      #     path: ./release/linux/
-
-      # - name: Download the macOS binary artifact
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: game_of_life_binary_macos-latest
-      #     path: ./release/macos/
-
-      # - name: Download the Windows binary artifact
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: game_of_life_binary_windows-latest
-      #     path: ./release/windows/
+        with:
+          path: ./release/
 
       - name: ls test
         run: |
-          ls -la
+          ls -la ./release
     
       - name: Publish GitHub Release
         uses: ncipollo/release-action@v1
@@ -87,9 +70,9 @@ jobs:
           name: ${{ github.ref_name }}
           body: |
             Automated release for version ${{ github.ref_name }}.
-          files: |
-            ./game_of_life_binary_ubuntu-latest
+          artifacts: |
+            ./release/*
           draft: false
           prerelease: false
           allowUpdates: true
-          latest: true
+          makeLatest: true
